<resources>
    <string name="app_name">Dictionary</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Trống</string>
    <string name="navigation_drawer_open">Mở thanh điều hướng</string>
    <string name="navigation_drawer_close">Đóng thanh điều hướng</string>
    <string name="nav_header_title">Từ điển Tiếng Anh</string>

    //nav
    <string name="nav_search">Tra Cứu</string>
    <string name="nav_trans">Dịch</string>
    <string name="nav_settings">Cài đặt</string>

    //nav_search
    <string name="search_term">Tra từ</string>
    <string name="side_meaning">Nghĩa của từ</string>
    <string name="todo">TODO</string>

    //nav_trans
    <string name="language_1">Ngôn ngữ 1</string>
    <string name="language_2">Ngôn ngữ 2</string>
    <string name="enter_word_hint">Nhấn để nhập từ</string>

    //nav_setting
    <string name="setting_theme">Chế độ tối</string>
    <string name="general_setting">Cài đặt chung</string>
    <string name="setting_language">Ngôn ngữ</string>
    <string name="setting_version">Phiên bản</string>
    <string name="version">1.0</string>
    <string name="about">Thông tin</string>
    <string name="about_us">Về chúng tôi</string>
    <string name="language_vn">Tiếng Việt</string>
    <string name="language_en">Tiếng Anh</string>
    <string name="On_theme">Bật</string>
    <string name="Off_theme">Tắt</string>
    <string name="alternative_translation">Bản dịch thay thế</string>

</resources>