<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.TransFragment"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="8dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/gray_background">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_source"
                    android:layout_width="170dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/gray_background"
                    android:text="@string/language_1"
                    android:textColor="@color/white"
                    android:drawableEnd="@drawable/arrow_drop_down"
                    android:textAlignment="textEnd"
                    android:paddingEnd="20dp"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="70dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/gray_background"
                    android:textColor="@color/white"

                    android:drawableStart="@drawable/arrow_forward_white"
                    android:paddingStart="24dp"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_target"
                    android:layout_width="170dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/gray_background"
                    android:text="@string/language_2"
                    android:textColor="@color/white"
                    android:drawableEnd="@drawable/arrow_drop_down"
                    android:textAlignment="textEnd"
                    android:paddingEnd="20dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:orientation="vertical">
                <ViewStub
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/stub"
                    android:inflatedId="@+id/sub_tree"
                    android:layout="@layout/after_translate"/>
                <EditText
                    android:id="@+id/source_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="30sp"
                    android:background="@null"
                    android:hint="@string/enter_word_hint"
                    android:paddingStart="20dp"
                    android:paddingTop="10dp"
                    android:inputType="text"/>
                <TextView
                    android:id="@+id/phonetic"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="30dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="phonetic"
                    android:textSize="15sp"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</ScrollView>